<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Battery Settings -->   
    <ListPreference
        android:defaultValue="70"
        android:dialogTitle="@string/battery_limit_dialog_title"
        android:entries="@array/battery_limits"
        android:entryValues="@array/battery_limit_values"
        android:key="@string/battery_limit_key"
        android:title="@string/battery_limit_title" />
    
     <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/charging_key"
        android:title="@string/charging_description_true" />
    

    <!-- Network Settings -->
    <ListPreference
        android:defaultValue="@string/network_description_wifi"
        android:entries="@array/network_options"
        android:entryValues="@array/network_options"
        android:dialogTitle="@string/network_settings_dialog_title"
        android:key="@string/wifi_key"
        android:title="@string/network_settings_dialog_title" />

    <!-- Storage settings -->
    <ListPreference
        android:defaultValue="@string/storage_option_internal"
        android:entries="@array/storage_options"
        android:entryValues="@array/storage_options"
        android:dialogTitle="@string/storage_dialog_title"
        android:key="@string/storage_key"
        android:title="@string/storage_title" />
    
    <!-- Notifications settings -->
     <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/show_notifications_key"
        android:title="@string/show_notifications_title" />

   

</PreferenceScreen>