<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@string/home_page_packets_processed_title_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/home_page_packets_processed_title_text"
        android:textStyle="bold" />

    <TextView
        android:id="@string/home_page_num_packets_processed_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@string/home_page_packets_processed_title_id"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="25dp" />

    <Button
        android:id="@string/home_page_processing_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@string/home_page_num_packets_processed_id"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:text="@string/home_page_processing_button_startup_text" />
    
     <TextView
        android:id="@string/home_page_email_title_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@string/home_page_processing_button_id"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/home_page_email_title_text"
        android:textStyle="bold" />

    <TextView
        android:id="@string/home_page_email_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@string/home_page_email_title_id"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/home_page_email_default_text" />
    <CheckedTextView 
        android:id="@string/home_page_anonymous_user_checked_text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@string/home_page_email_text_id"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:gravity="fill_vertical"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="25dp"       
        android:clickable="false"    
        android:textColor="@color/abc_secondary_text_material_light"
        android:text="@string/home_page_anonymous_user_checked_text_view_text"/>

    <Button
        android:id="@string/home_page_change_email_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@string/home_page_anonymous_user_checked_text_view_id"        
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"       
        android:text="@string/home_page_change_email_button_text" />

</RelativeLayout>