<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"    
    tools:context="uk.ac.qub.finalproject.client.views.MainActivity" >    
    
    <ImageView 
        android:layout_above="@string/register_email_field_id"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/citizen_science_image_4"
        android:scaleType="fitXY"
        android:contentDescription="@string/register_page_image_description"/>
        
   
    <EditText
        android:id="@string/register_email_field_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@string/register_button_id"
        android:hint="@string/register_email_field_text"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@string/register_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@string/register_anonymously_checked_textview_id"
        android:text="@string/register_button_text" />

    <CheckedTextView
        android:id="@string/register_anonymously_checked_textview_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"        
        android:layout_marginStart="8dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:clickable="true"
        android:gravity="fill_vertical"
        android:text="@string/register_anonymously_text" />

</RelativeLayout>