<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ImageView
        android:id="@string/about_page_image_id"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@string/about_page_scroller_view_id"
        android:contentDescription="@string/register_page_image_description"
        android:scaleType="fitXY"
        android:src="@drawable/studying_robot" />

    <ScrollView
        android:id="@string/about_page_scroller_view_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@string/about_page_donate_button_id"
        android:layout_centerHorizontal="true"
        android:fillViewport="true"
        android:scrollbars="vertical" >

        <TextView
            android:id="@string/about_page_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:paddingTop="36dp"
            android:scaleType="fitXY"
            android:textIsSelectable="false" />
    </ScrollView>

    <Button
        android:id="@string/about_page_donate_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/about_page_donate_button_text" >
    </Button>

</RelativeLayout>